# QueryForge

./: .gitignore  README.md
backend/: pyproject.toml  pytest.ini
backend/src/: main.py
backend/src/api/: __init__.py  dbs.py
backend/src/llm/: client.py
backend/src/models/: schemas.py
backend/src/repositories/: connection_factory.py  connection_factory_interface.py  introspector_factory.py  introspector_interface.py  mysql_connection_factory.py  mysql_introspection.py  postgres_connection_factory.py  postgres_introspection.py  sqlite_store.py
backend/src/services/: database_service.py  metadata_service.py  mysql_dialect.py  postgres_dialect.py  sql_dialect_factory.py  sql_dialect_interface.py  sql_service.py
backend/tests/: test_core.py  test_integration_mysql.py  test_integration_postgres.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: app.tsx  types.ts
frontend/src/components/: DatabaseTypeLabel.tsx  placeholder.tsx
frontend/src/pages/: index.tsx
frontend/src/services/: api.ts
