[project]
name = "db-query-backend"
version = "0.1.0"
description = "Database query explorer backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "sqlglot>=25.0.0",
  "openai>=1.25.0",
  "psycopg[binary]>=3.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
